@@ -176,9 +176,7 @@ class FastAccelStepper {
 
   // Low level acccess via command queue
   // stepper queue management (low level access)
-  //	delta_ticks is multiplied by (1/TICKS_PER_S) s
-  //	steps must be less than 128 aka 7 bits
-  int8_t addQueueEntry(uint32_t delta_ticks, uint8_t steps, bool dir_high);
+  int8_t addQueueEntry(struct stepper_command_s *cmd);
 
   // Return codes for addQueueEntry
 #define AQE_OK 0
