@@ -1,6 +1,8 @@
 #ifndef COMMON_H
 #define COMMON_H
 
+//	ticks is multiplied by (1/TICKS_PER_S) s
+//	steps must be less than 128 aka 7 bits
 struct stepper_command_s {
   uint32_t ticks;
   uint8_t steps;
