@@ -32,7 +32,13 @@ void basic_test() {
   assert(0 == s.getCurrentPosition());
   assert(s.isQueueEmpty());
   assert(s.isQueueEmpty());
-  s.addQueueEntry(10000, 100, true);
+        struct stepper_command_s cmd = {
+			.ticks = 100000,
+			.steps = 100,
+			.state = 0, // PROBLEM
+			.count_up = true
+		};
+  s.addQueueEntry(&cmd);
   assert(!s.isQueueEmpty());
 }
 
@@ -46,14 +52,20 @@ void queue_full() {
   assert(s.isQueueEmpty());
   printf("Queue read/write = %d/%d\n", fas_queue[0].read_idx,
          fas_queue[0].next_write_idx);
+        struct stepper_command_s cmd = {
+			.ticks = 100000,
+			.steps = 100,
+			.state = 0, // PROBLEM
+			.count_up = true
+		};
   for (int i = 0; i < QUEUE_LEN - 1; i++) {
-    s.addQueueEntry(10000, 100, true);
+    s.addQueueEntry(&cmd);
     assert(!s.isQueueEmpty());
     assert(!s.isQueueFull());
     printf("Queue read/write = %d/%d\n", fas_queue[0].read_idx,
            fas_queue[0].next_write_idx);
   }
-  s.addQueueEntry(10000, 100, true);
+    s.addQueueEntry(&cmd);
   printf("Queue read/write = %d/%d\n", fas_queue[0].read_idx,
          fas_queue[0].next_write_idx);
   assert(!s.isQueueEmpty());
@@ -72,15 +84,34 @@ void queue_out_of_range() {
   assert(s.isQueueEmpty());
   assert(s.isQueueEmpty());
 
-  res = s.addQueueEntry(ABSOLUTE_MAX_TICKS + 1, 100, true);
+        struct stepper_command_s cmd1 = {
+			.ticks = ABSOLUTE_MAX_TICKS+1,
+			.steps = 100,
+			.state = 0, // PROBLEM
+			.count_up = true
+		};
+  res = s.addQueueEntry(&cmd1);
   test(res == AQE_TOO_HIGH, "Too high provided should trigger error");
   assert(s.isQueueEmpty());
 
-  res = s.addQueueEntry(65535, 128, true);
+        struct stepper_command_s cmd2 = {
+			.ticks = 65535,
+			.steps = 128,
+			.state = 0, // PROBLEM
+			.count_up = true
+		};
+
+  res = s.addQueueEntry(&cmd2);
   test(res == AQE_STEPS_ERROR, "Too high step count should trigger an error");
   assert(s.isQueueEmpty());
 
-  res = s.addQueueEntry(ABSOLUTE_MAX_TICKS, 100, true);
+        struct stepper_command_s cmd3 = {
+			.ticks = ABSOLUTE_MAX_TICKS,
+			.steps = 100,
+			.state = 0, // PROBLEM
+			.count_up = true
+		};
+  res = s.addQueueEntry(&cmd3);
   test(res == AQE_OK, "In range should be accepted");
   assert(!s.isQueueEmpty());
 }
@@ -90,7 +121,14 @@ void end_pos_test() {
   FastAccelStepper s = FastAccelStepper();
   s.init(0, 0);
   assert(0 == s.getPositionAfterCommandsCompleted());
-  s.addQueueEntry(65535, 1, true);
+        struct stepper_command_s cmd = {
+			.ticks = 65535,
+			.steps = 1,
+			.state = 0, // PROBLEM
+			.count_up = true
+		};
+
+  s.addQueueEntry(&cmd);
   assert(1 == s.getPositionAfterCommandsCompleted());
 }
 
